<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/colorBackground"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="ConnectCall App"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/auth_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/contact_auth_img"
        android:contentDescription="@string/contact_app_image"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"/>

    <!-- Username Label and Input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Username"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/auth_input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="16dp"
        android:background="@drawable/rounded_input"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginHorizontal="20dp"
        android:textColorHint="@color/colorTextSecondary"
        android:layout_gravity="center" />

    <!-- Password Label and Input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Password"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/auth_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        android:padding="16dp"
        android:background="@drawable/rounded_input"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/login_btn_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/red_bordered"
            android:text="@string/exit_btn_text"
            android:textColor="@color/colorError" />

        <!-- Remember Me Checkbox -->
        <CheckBox
            android:id="@+id/remember_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Remember me"
            android:textColor="@color/colorTextPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered_yet"
            android:layout_marginLeft="20dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_now"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>
