<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ConnectCall App"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/auth_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/contact_app_image"
        android:src="@drawable/contact_auth_img" />

    <!-- Username Input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="Username"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/register_input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_input"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary"
        android:hint="@string/hint_username" />

    <!-- Phone Number Input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Phone Number"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/register_input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_input"
        android:hint="Enter your phone number"
        android:inputType="phone"
        android:padding="16dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary" />

    <!-- Password Input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Password"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/register_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_input"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary"
        android:hint="Enter password" />

    <!-- Confirm Password Input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Confirm Password"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/register_input_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_input"
        android:inputType="textPassword"
        android:hint="Confirm your password"
        android:padding="16dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary" />

    <!-- Register Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/singup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="Signup"
            android:textColor="@color/white" />

        <!-- Remember Me Checkbox -->
        <CheckBox
            android:id="@+id/remember_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Remember me"
            android:textColor="@color/colorTextPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="-10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/not_registered_yet"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login_now"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
